bodhi/static/css/site.css
p, .lead {
    margin-bottom: 0px;
}

a {
    outline: 0 !important;
}

a:hover {
    text-decoration: none;
}

.centered {
    display: block;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.messenger-message-inner a {
    color: white;
    text-decoration: none;
}

